Test_Diagrams/valid/clinic_classes_extension_valid.puml
@startuml
class Patient {
  email: str
  +updateContactInfo(phone, email)
}

class AppointmentService {
  +rescheduleAppointment(appointmentId, newSlotId)
  +cancelAppointment(appointmentId)
}

class BillingService {
  +refundPatient(patientId, amount)
  +sendPaymentReceipt(invoiceId)
}

class Doctor {
  +writePrescription(patientId)
}
@enduml
