Test_Diagrams/invalid/clinic_classes_conflicts_invalid.puml
@startuml
class Patient {
  patientId: str
  fullName: str
  phone: str
  +requestAppointment()
  +confirmVisit()
  +payInvoice()
}

class AppointmentService {
  +bookAppointment(patientId)
  +rescheduleAppointment(appointmentId, newSlotId)
}

class BillingService {
  +createInvoice(appointmentId, tariffCode)
  +refundPatient(patientId, amount)
}

class Doctor {
}
@enduml
